syntax = "proto3";

option go_package = "pb/gen";

package ukama.dataplan.rate.v1;

import "validator.proto";

import "baserate.proto";

/* 

Rate
Rate service adds the markup on the current cost i.e base rates and provides the final applicable rate for the user.
If the user doesn't have any custom rates for him then the default markup is applied otherwise custom markup is considered

*/

service RateService {

    rpc GetMarkup(GetMarkupRequest) returns (GetMarkupResponse);
    rpc UpdateMarkup(UpdateMarkupRequest) returns (UpdateMarkupResponse);
    rpc DeleteMarkup(DeleteMarkupRequest) returns (DeleteMarkupResponse);
    rpc GetMarkupHistory(GetMarkupHistoryRequest) returns (GetMarkupHistoryResponse);
    
    rpc GetDefaultMarkup(GetDefaultMarkupRequest) returns (GetDefaultMarkupResponse);
    rpc UpdateDefaultMarkup(UpdateDefaultMarkupRequest) returns (UpdateDefaultMarkupResponse);
    rpc GetDefaultMarkupHistory(GetDefaultMarkupHistoryRequest) returns (GetDefaultMarkupHistoryResponse);
    
    rpc GetRates (GetRatesRequest) returns (GetRatesResponse);
    rpc GetRate(GetRateRequest) returns (GetRateResponse);

}

message MarkupRates {
    string createdAt = 1;
    string deletedAt = 2;
    double Markup = 3;
}

message UpdateMarkupRequest {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
    double Markup = 2;
}

message UpdateMarkupResponse {
}

message DeleteMarkupRequest {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
}

message DeleteMarkupResponse {
}

message GetMarkupRequest {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
}

message GetMarkupResponse {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
    double Markup = 2;
}

message GetDefaultMarkupRequest {
}

message GetDefaultMarkupResponse {
    double Markup = 1;
}

message GetDefaultMarkupHistoryRequest {
}

message GetDefaultMarkupHistoryResponse {
    repeated MarkupRates markupRates= 1;
}

message GetMarkupHistoryRequest {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
}

message GetMarkupHistoryResponse {
    string ownerId = 1 [(validator.field) = {string_not_empty: true}];
    repeated MarkupRates markupRates = 2;
}


message UpdateDefaultMarkupRequest {
    double Markup = 1;
}

message UpdateDefaultMarkupResponse {
}

message GetRatesRequest{
    string country = 1;
    string provider =2;
    uint64 to  =3;
    uint64 from  =4;
    string simType=5 [json_name = "sim_type"];
    string effectiveAt = 6 [json_name = "effective_at"];
}

message GetRatesResponse {
    repeated ukama.dataplan.baserate.v1.Rate rates = 1;
}

message GetRateRequest{
    string ownerId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string country = 2;
    string provider =3;
    uint64 to  =4;
    uint64 from  =5;
    string simType=6 [json_name = "sim_type"];
    string effectiveAt = 7 [json_name = "effective_at"];
}

message GetRateResponse{
    repeated ukama.dataplan.baserate.v1.Rate rates =1;
}

// message Rate{
//     string uuid= 1 [(validator.field) = {uuid_ver: 4}];
//     string country=2;
//     string network = 3;
//     string vpmn =4;
//     string imsi=5;
//     double smsMo=6 [json_name = "sms_mo"];
//     double smsMt =7 [json_name = "sms_mt"];
//     double data =8;
//     bool  _2g=9;
//     bool _3g=10;
//     bool _5g=11;
//     bool lte=12; 
//     bool lteM=13 [json_name = "lte_m"];
//     string apn=14; 
//     string createdAt=15 [json_name = "created_at"];
//     string deletedAt=16 [json_name = "deleted_at"];
//     string updatedAt=17 [json_name = "updated_at"];
//     string effectiveAt=18 [json_name = "effective_at"];
//     string endAt=19 [json_name = "end_at"];
//     string simType=20 [json_name = "sim_type"];
//     string currency =21 [json_name = "currency"];
// }
